--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -705,3 +705,33 @@ footer h2{
   font-size: 20px;
   font-weight: 200;
 }
+
+/* Cart Styles */
+.cartImage {
+  height: 75px;
+  width: 100px;
+  margin-top: 10px;
+}
+.cartTitle1{
+  font-size: 20px;
+  font-weight: 800;
+  text-align: center;
+  /* margin-top: 20px; */
+  /* margin-bottom: 10px; */
+}
+.cartDiv {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.cartReturn {
+  border: 2px solid #D2A0DD; 
+  width: 20vw;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  margin-left: 40vw;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  padding: 10px;
+}
