--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -723,6 +723,7 @@ footer h2{
   display: flex;
   align-content: center;
   align-items: center;
+  justify-content: center;
 }
 .cartReturn {
   /* border: 2px solid #D2A0DD;  */
@@ -730,6 +731,7 @@ footer h2{
   width: 20vw;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-self: center;
   margin-left: 40vw;
   margin-top: 20px;
@@ -741,6 +743,7 @@ footer h2{
   list-style-type: none;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-content: center;
   align-items: center;
 }
