--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-/* body {
+body {
   margin: 0;
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
@@ -12,7 +12,7 @@ code {
 }
 
 
-nav {
+/* nav {
   display:flex;
   justify-content:space-around;
   align-items:center;
@@ -168,7 +168,6 @@ nav a {
 .menu-wrap .toggler:checked ~ .menu > div > div {
   opacity: 1;
   transition:  opacity 0.4s ease 0.4s;
-
 }
 
 .menu-wrap .menu {
@@ -239,7 +238,6 @@ nav a {
   display: flex;
   flex-direction: column;
   height: 100vh;
-
   background: url("./images2/ethicalTraveler.jpeg") no-repeat center center fixed; 
   /* -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -747,4 +745,8 @@ footer h2{
   justify-content: center;
   align-content: center;
   align-items: center;
+}
+
+.clickCart {
+  text-align: end;
 }
