--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  /* margin: 0; */
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -10,7 +10,6 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
-
 
 /* nav {
   display:flex;
@@ -250,7 +249,7 @@ nav a {
   position: absolute;
   top: 0;
   left: 0;
-  padding-top: 150px;
+  padding-top: 220px;
   z-index: -1;
 }
 
@@ -260,7 +259,6 @@ nav a {
     margin-left: -512px;   /* 50% */
   }
 }
-
 
 .homeHeader{
   text-align:center;
@@ -308,7 +306,9 @@ nav a {
   background-color: white;
   opacity: 100%;
   align-items: center;
+  z-index: 7;
 }
+
 #cheeseburgers {
   width: 250px;
   height: 70px;
